# image_quadtree

./: .gitattributes  CMakeLists.txt  README.md
docs/: memo.md
examples/: CMakeLists.txt  ExImageQuadtree.cpp  ExImageQuadtreeHeartShape.cpp  ExVideoQuadtreeHeartShape.cpp
include/image_quadtree/: ImageQuadtree.hpp  Utility.hpp  image_quadtree.hpp
scripts/: create_gif.sh
src/: CMakeLists.txt
src/image_quadtree/: ImageQuadtree.cpp  Utility.cpp
tests/: Testimage_quadtree.cpp
